sourceview: move all construction of Sourceview into constructed

To do this we make the reference to the SourceviewPlugin a property so
that it is set when constructed() is executed.

The benefit of this is that now is the plugin variable already set when the
Sourceview instance is passed to sourceview_io_new().

https://bugzilla.gnome.org/show_bug.cgi?id=692451